--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -7,7 +7,7 @@
     fxFlex.xs="100"
   >
     <img
-      src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Logo.jfif?alt=media&token=19ce4a2d-225d-4862-9dce-8b5fae6274ae"
+      src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/logo.png?alt=media&token=e6207e3f-4aed-4561-a985-aba498b12dd4"
       alt="logo RLSC"
       width="70%"
       style="margin: 0 auto; margin-bottom: 10px;"
