--- a/src/app/capacitaciones/ui/upload-capacitacion/upload-capacitacion.component.html
+++ b/src/app/capacitaciones/ui/upload-capacitacion/upload-capacitacion.component.html
@@ -77,7 +77,7 @@
       fxLayout.xs="column"
     >
       <button mat-raised-button mat-dialog-close="" color="accent">
-        cancelar
+        Cerrar
       </button>
       <button
         mat-raised-button
