--- a/src/app/comites/comites.component.html
+++ b/src/app/comites/comites.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="30">
   <h1>COMITÉS TÉCNICOS</h1>
   <div fxLayoutAlign="center center" fxLayout="column" fxLayoutGap="30">
-    <div fxLayout="row wrap" fxLayoutAlign="center center">
+    <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center center">
       <div fxFlex="40">
         <img
           src="../../assets/rs=w_600,h_300,cg_true.webp"
@@ -23,12 +23,13 @@
         <h3>Whatsapp: +50494417336</h3>
       </div>
     </div>
-    <div fxLayout="row wrap" fxLayoutAlign="center center">
+    <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center center">
       <div
         fxLayout="column"
         fxLayoutGap="30"
         fxLayoutAlign="center center"
         fxFlex="60"
+        fxFlexOrder.xs="2"
       >
         <h1 style="font-size: 40px; text-align: center">
           Comité de Inspección y Confiabilidad en Calderas
@@ -36,7 +37,7 @@
         <h3>Coordinador: Estuardo Montaván</h3>
         <a style="font-size: 20px">Info@redseguridadcalderas.org</a>
       </div>
-      <div fxFlex="40">
+      <div fxFlex="40" fxFlexOrder.xs="1"> 
         <img
           src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/misi%C3%B3n.jpg?alt=media&token=e8355509-77bb-4a48-89d8-325e604d5971"
           width="100%"
