--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <div fxFill fxLayout="column">
-  <app-navbar></app-navbar>
+  <app-navbar [user]="autenticado"></app-navbar>
   <router-outlet></router-outlet>
 </div>
