--- a/src/app/normativa/normativa.component.html
+++ b/src/app/normativa/normativa.component.html
@@ -1,10 +1,10 @@
-<div fxFill fxLayout="column" fxLayoutGap="30">
-  <h1 color="primary" fxLayoutAlign="center center" class="titulo">
+<div fxFill fxLayout="column" fxLayoutGap="30" style="word-break: break-word">
+  <h1 color="primary" fxLayoutAlign="center center" class="titulo" style="text-align: center;">
     NORMATIVAS DE ALGUNOS PAISES LATINOAMERICANOS
   </h1>
-  <div fxLayoutGap="10">
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
     <!-- mexico -->
-    <div fxLayout="column" fxFlex="40">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/3195791_5573.jpg?alt=media&token=252ddaa7-02e3-4c0e-9614-322885766362"
         alt=""
@@ -21,9 +21,11 @@
     </div>
     <div
       fxFlex="50"
+      fxFlex.xs="100"
       fxLayout="column"
       fxLayoutGap="30"
       fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
     >
       <h2>MÉXICO</h2>
       <span
@@ -45,9 +47,10 @@
       >
     </div>
   </div>
-  <div fxLayoutGap="10">
+
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
     <!-- Costa rica -->
-    <div fxLayout="column" fxFlex="40">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/2189960_3796.jpg?alt=media&token=2fc75057-3dc7-4983-8307-6cea3b01e306"
         alt=""
@@ -64,9 +67,11 @@
     </div>
     <div
       fxFlex="50"
+      fxFlex.xs="100"
       fxLayout="column"
       fxLayoutGap="30"
       fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
     >
       <h2>COSTA RICA</h2>
       <span
@@ -87,9 +92,10 @@
       >
     </div>
   </div>
-  <div fxLayoutGap="10">
+
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
     <!-- Cuba -->
-    <div fxLayout="column" fxFlex="40">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/hands-waving-flags-of-cuba.jpg?alt=media&token=345d95e4-a78f-4a9e-89c0-4303ff181214"
         alt=""
@@ -106,9 +112,11 @@
     </div>
     <div
       fxFlex="50"
+      fxFlex.xs="100"
       fxLayout="column"
       fxLayoutGap="30"
       fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
     >
       <h2>CUBA</h2>
       <span
@@ -147,8 +155,8 @@
   </div>
 
   <!-- Venezuela -->
-  <div fxLayoutGap="10">
-    <div fxLayout="column" fxFlex="40">
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/1155232_OR7ZM80.jpg?alt=media&token=45364629-958e-45c3-80b9-7a50cf652646"
         alt=""
@@ -165,9 +173,11 @@
     </div>
     <div
       fxFlex="50"
+      fxFlex.xs="100"
       fxLayout="column"
       fxLayoutGap="30"
       fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
     >
       <h2>VENEZUELA</h2>
       <span
@@ -187,8 +197,8 @@
   </div>
 
   <!-- brasil -->
-  <div fxLayoutGap="10">
-    <div fxLayout="column" fxFlex="40">
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/3888783_11900.jpg?alt=media&token=d4f31916-1136-426c-bf52-c6133931ee84"
         alt=""
@@ -205,9 +215,11 @@
     </div>
     <div
       fxFlex="50"
+      fxFlex.xs="100"
       fxLayout="column"
       fxLayoutGap="30"
       fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
     >
       <h2>BRASIL</h2>
       <span
@@ -222,8 +234,8 @@
   </div>
 
   <!-- chile -->
-  <div fxLayoutGap="10">
-    <div fxLayout="column" fxFlex="40">
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/chile-flag-wrinkled-on-dark-background-3d-render.jpg?alt=media&token=35dde4bf-fb09-4801-978e-83823805d8be"
         alt=""
@@ -240,9 +252,11 @@
     </div>
     <div
       fxFlex="50"
+      fxFlex.xs="100"
       fxLayout="column"
       fxLayoutGap="30"
       fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
     >
       <h2>CHILE</h2>
       <span
@@ -265,8 +279,8 @@
   </div>
 
   <!-- Uruguay -->
-  <div fxLayoutGap="10">
-    <div fxLayout="column" fxFlex="40">
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
       <img
         src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/flag-of-uruguay.jpg?alt=media&token=22d0f138-2b50-4150-9f92-fee26b38b4d6"
         alt=""
@@ -283,9 +297,11 @@
     </div>
     <div
       fxFlex="50"
+      fxFlex.xs="100"
       fxLayout="column"
       fxLayoutGap="30"
       fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
     >
       <h2>URUGUAY</h2>
       <span
@@ -312,6 +328,59 @@
         href="Modificaciones al de Reglamento Generadores de Vapor (2021) (.pdf 288 KB)"
         >Borrador de Reglamento de Generadores de vapor de baja presión.pdf
         (ursea.gub.uy)</a
+      >
+    </div>
+  </div>
+
+  <!-- Argentina -->
+  <div fxLayoutGap="10" fxLayout="row" fxLayout.xs="column">
+    <div fxLayout="column" fxFlex="40" fxFlex.xs="100">
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/2470362_305828-P7UL49-535.jpg?alt=media&token=cd8ce26c-2620-4f19-9a37-ad1fbb7108fa"
+        alt=""
+        height="300px"
+      />
+      <div>
+        tomado de:
+        <a
+          href="https://www.freepik.es/vector-gratis/fondo-bandera-argentina_2470362.htm#query=argentina&position=48&from_view=search&track=sph"
+          >Freepik</a
+        >
+      </div>
+    </div>
+    <div
+      fxFlex="50"
+      fxFlex.xs="100"
+      fxLayout="column"
+      fxLayoutGap="30"
+      fxLayoutAlign="center stretch"
+      fxLayoutAlign.xs="center center"
+    >
+      <h2>Argentina</h2>
+      <span
+        >REGLAMENTO PARA LA INSCRIPCIÓN, HABILITACIÓN, INSPECCIÓN, ATENCIÓN Y
+        MANEJO DE CALDERAS Y APARATOS SOMETIDOS A PRESIÓN:
+        <a
+          href="https://www.santafe.gov.ar/boletinoficial/recursos/boletines/13-04-2016decreto605-2016.html"
+          >https://www.santafe.gov.ar/boletinoficial/recursos/boletines/13-04-2016decreto605-2016.html</a
+        ></span
+      >
+      REGLAMENTO DE APARATOS A VAPOR Y PRESIÓN:
+      <a
+        href="https://docplayer.es/67426278-2012-ano-provincial-del-agua-de-las-misiones-recurso-estrategico-para-el-futuro-de-los-misioneros-reglamento-de-aparatos-a-vapor-y-presion.html"
+        >https://docplayer.es/67426278-2012-ano-provincial-del-agua-de-las-misiones-recurso-estrategico-para-el-futuro-de-los-misioneros-reglamento-de-aparatos-a-vapor-y-presion.html</a
+      >
+
+      Subsecretaria de Trabajo y Seguridad Social - Publicación B.O.: 02/08/2011
+      <a
+        href="https://docplayer.es/41394591-Aparatos-sometidos-a-presion-registro-de-calderas-y-afines-incorporacion.html"
+        >https://docplayer.es/41394591-Aparatos-sometidos-a-presion-registro-de-calderas-y-afines-incorporacion.html</a
+      >
+
+      "CONTROL, USO Y SEGURIDAD DE LOS GENERADORES DE VAPOR".
+      <a
+        href="https://cordobaproduce.cba.gov.ar/wp-content/uploads/2020/05/DECRETO-536-97-Generadores-de-vapor.pdf"
+        >https://cordobaproduce.cba.gov.ar/wp-content/uploads/2020/05/DECRETO-536-97-Generadores-de-vapor.pdf</a
       >
     </div>
   </div>
