--- a/src/app/quienes-somos/feature-somos/feature-somos.component.html
+++ b/src/app/quienes-somos/feature-somos/feature-somos.component.html
@@ -1,11 +1,4 @@
-<div fxLayout="column" fxFill>
-  <div>
-    <img
-      src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/objetivosRed.png?alt=media&token=3b4d44d8-d20a-49a8-9f11-a4c867e8c5ac"
-      alt="Objetivos de la red"
-      width="100%"
-    />
-  </div>
+<div fxLayout="column" fxFill fxLayoutGap="20">
   <div fxLayout="row" fxLayoutGap="20" fxLayout.xs="column" fxLayoutGap.xs="10">
     <div fxFlex="50" fxFlex.xs="100">
       <img
@@ -56,7 +49,7 @@
     </div>
     <div fxFlex="50" fxFlex.xs="100">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/misi%C3%B3n.jpg?alt=media&token=e8355509-77bb-4a48-89d8-325e604d5971"
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Cuarto%20de%20Calderas.jpg?alt=media&token=59c6c0c8-342d-4226-85a5-bec261905ccf"
         alt=""
         width="100%"
       />
@@ -83,6 +76,118 @@
         expongan la vida de las personas alrededor de una caldera y proteger el
         medio ambiente controlando la emisión de gases de combustión
       </div>
+    </div>
+  </div>
+  <div>
+    <img
+      src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/objetivosRed.png?alt=media&token=3b4d44d8-d20a-49a8-9f11-a4c867e8c5ac"
+      alt="Objetivos de la red"
+      width="100%"
+    />
+  </div>
+  <div fxLayout="column">
+    <!-- membresia -->
+    <div
+      fxFlex="100"
+      fxLayoutAlign="space-around center"
+      fxLayout="column"
+      fxLayoutGap="10"
+    >
+      <h1 fxFlex="100" fxLayoutAlign="center center">MEMBRESÍA</h1>
+      <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10">
+        <h2>TIPOS DE MIEMBROS</h2>
+        <div>
+          La Red ha definido tres tipos de miembros, cada uno con beneficios
+          adecuados a sus necesidades:
+        </div>
+        <li>Profesionales y técnicos</li>
+        <li>Estudiantes y jóvenes profesionales</li>
+        <li>Empresas - corporativos</li>
+      </div>
+      <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="10">
+        <h2 fxFlex="100" fxLayoutAlign="center center">INVERSIÓN</h2>
+        <div
+          fxFlex="30"
+          fxFlex.xs="100"
+          fxLayout="column"
+          fxLayoutAlign="center start"
+        >
+          <h3>PARA PROFESIONALES Y TÉCNICOS:</h3>
+          <li>25 US$ (para profesionales en ejercicio pleno)</li>
+          <li>
+            Para ingenieros o profesionales recién graduados (hasta un año de su
+            graduación) gozarán del pago de solo un 75% del valor de la
+            membresía
+          </li>
+          <li>Profesionales jubilados: 50% descuento</li>
+        </div>
+        <div
+          fxFlex="30"
+          fxFlex.xs="100"
+          fxLayout="column"
+          fxLayoutAlign="center center"
+        >
+          <h3>PARA ESTUDIANTES:</h3>
+          <li>
+            25 US$, a los que se aplica un 50% de descuento al presentar los
+            requisitos para esa clase de miembro (comprobantes de matrícula o
+            registro académico de universidades o instituciones
+            profesionales/técnicas).
+          </li>
+          <li>
+            Membresía gratuita para el año siguiente, a los estudiantes
+            brillantes y/o destacados que durante su tiempo como miembros hagan
+            un aporte técnico de importancia a la RLSC.
+          </li>
+        </div>
+        <div
+          fxFlex="30"
+          fxFlex.xs="100"
+          fxLayout="column"
+          fxLayoutAlign="center center"
+        >
+          <h3>PARA JÓVENES PROFESIONALES:</h3>
+          <li>
+            25 US$, a los que se aplica un 25% de descuento al presentar los
+            requisitos para esa clase de miembro certificados de estudios,
+            títulos y/o constancia de membresía en Secciones de Estudiantes,
+            universidades o instituciones profesionales/técnicas.
+          </li>
+        </div>
+      </div>
+    </div>
+    <div
+      fxLayoutAlign="center center"
+      fxFlex="80"
+      fxLayout="column"
+      style="margin-top: 20px"
+    >
+      <h1>FUNDADORES</h1>
+      <img
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Foto%20de%20los%20Fundadores%20REDCAL2.png?alt=media&token=97208059-a21b-45d3-a435-99fb16dd0d46"
+        alt=""
+        width="80%"
+      />
+    </div>
+    <div fxLayoutAlign="center center" fxLayout="row wrap">
+      <h2 fxFlex="100" fxLayoutAlign="center center">
+        CREACIÓN, ESTATUTOS Y ENTREVISTAS
+      </h2>
+      <a
+        fxFlex="40"
+        href="https://www.youtube.com/watch?v=oUT0CLbm3f0"
+        target="_blank"
+      >
+        Creacion y estatutos: https://www.youtube.com/embed/oUT0CLbm3f0
+      </a>
+      <a
+        fxFlex="40"
+        href="https://www.facebook.com/ciemicr/videos/409728147691390/?extid=WA-UNK-UNK-UNK-IOS_GK0T-GK1C&ref=sharing&_rdc=2&_rdr"
+        target="_blank"
+      >
+        Entrevista:
+        https://www.facebook.com/ciemicr/videos/409728147691390/?extid=WA-UNK-UNK-UNK-IOS_GK0T-GK1C&ref=sharing&_rdc=2&_rdr
+      </a>
     </div>
   </div>
 </div>
