--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -120,11 +120,11 @@
           <mat-icon> person</mat-icon>
         </button>
         <mat-menu #menu="matMenu" fxLayout="row wrap">
-          <button routerLink="auth/login" mat-menu-item>Iniciar Sesión</button>
+          <button routerLink="auth/login" mat-menu-item *ngIf="user">Iniciar Sesión</button>
           <button routerLink="auth/register" mat-menu-item>Registrarse</button>
-          <!-- <button (click)="singOut()" mat-menu-item >
+          <button (click)="singOut()" mat-menu-item *ngIf="!user">
             Cerrar Sesión
-          </button> -->
+          </button>
         </mat-menu>
       </div>
     </div>
