--- a/src/app/servicios/ui/upload-service/upload-service.component.html
+++ b/src/app/servicios/ui/upload-service/upload-service.component.html
@@ -2,7 +2,7 @@
   <div fxLayout="row">AGREGAR NUEVO SERVICIO</div>
   <form [formGroup]="formulario" fxLayout="column" fxLayoutGap="10">
     <mat-form-field appearance="outline">
-      <mat-label>Outline form field</mat-label>
+      <mat-label>Nombre de servicio</mat-label>
       <input
         matInput
         placeholder="Ingrese nombre del servicio"
@@ -10,7 +10,7 @@
       />
     </mat-form-field>
     <mat-form-field appearance="outline">
-      <mat-label>Outline form field</mat-label>
+      <mat-label>Detalles del servicio</mat-label>
 
       <textarea
         matInput
