--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
         >
         <div fxFLex="50">
           <img
-            src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Captura%20de%20pantalla%202022-11-14%20111358.png?alt=media&token=6707dad1-61b6-4621-bc5e-67d6c9112c14"
+            src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/IMG-20120112-00619.jpg?alt=media&token=bf897306-23d3-4487-9b2f-7082e29c6b53"
             alt=""
             width="370px"
           />
@@ -67,6 +67,7 @@
       <!-- guia -->
       <div fxLayout="column" class="cuadrado" fxFill>
         <h1 fxLayoutAlign="center center">GUIA DE USUARIO</h1>
+        <p fxLayoutAlign="center center" style="color: white;">Accede desde aquí a nuestras capacitaciones, servicios y comités técnicos.</p>
         <div
           fxLayoutAlign="space-evenly center"
           fxFlex="100"
