--- a/src/app/quienes-somos/feature-somos/feature-somos.component.html
+++ b/src/app/quienes-somos/feature-somos/feature-somos.component.html
@@ -2,7 +2,7 @@
   <div fxLayout="row" fxLayoutGap="20" fxLayout.xs="column" fxLayoutGap.xs="10">
     <div fxFlex="50" fxFlex.xs="100">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/quienes%20somos.jpg?alt=media&token=d40889d5-a434-477e-9af9-9301d3ec7c35"
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Fotografias%20Iphone%20nov%202014%20330.JPG?alt=media&token=54283001-8d73-4ed6-86ef-67f2647a6c15"
         alt=""
         width="100%"
       />
@@ -13,7 +13,7 @@
       fxLayoutAlign="center center"
       fxLayout="column"
     >
-      <h1>¿Quienes Somos?</h1>
+      <h1>¿Quiénes Somos?</h1>
       <div>
         La Red Latinoamericana de Seguridad en Calderas (RLSC) es una entidad de
         bienestar social, de carácter privado, no lucrativa y de duración
@@ -49,7 +49,7 @@
     </div>
     <div fxFlex="50" fxFlex.xs="100">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Cuarto%20de%20Calderas.jpg?alt=media&token=59c6c0c8-342d-4226-85a5-bec261905ccf"
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/IMG-20120830-00039.jpg?alt=media&token=9b9cef77-5b8a-44ac-8931-1b24b2f79bb2"
         alt=""
         width="100%"
       />
@@ -178,14 +178,18 @@
         href="https://www.youtube.com/watch?v=oUT0CLbm3f0"
         target="_blank"
       >
-        Creacion y estatutos: https://www.youtube.com/embed/oUT0CLbm3f0
+        <span style="font-size: 18px"> Creacion y estatutos:</span> <br />
+        https://www.youtube.com/embed/oUT0CLbm3f0
       </a>
       <a
         fxFlex="40"
         href="https://www.facebook.com/ciemicr/videos/409728147691390/?extid=WA-UNK-UNK-UNK-IOS_GK0T-GK1C&ref=sharing&_rdc=2&_rdr"
         target="_blank"
       >
-        Entrevista:
+        <span style="font-size: 18px"
+          >Entrevista a Richard Bolivar Hidalgo, Presidente de la Red:</span
+        >
+        <br />
         https://www.facebook.com/ciemicr/videos/409728147691390/?extid=WA-UNK-UNK-UNK-IOS_GK0T-GK1C&ref=sharing&_rdc=2&_rdr
       </a>
     </div>
