--- a/src/app/quienes-somos/feature-somos/feature-somos.component.html
+++ b/src/app/quienes-somos/feature-somos/feature-somos.component.html
@@ -49,7 +49,7 @@
     </div>
     <div fxFlex="50" fxFlex.xs="100">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/IMG-20120830-00039.jpg?alt=media&token=9b9cef77-5b8a-44ac-8931-1b24b2f79bb2"
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/Cuarto%20de%20Calderas.jpg?alt=media&token=59c6c0c8-342d-4226-85a5-bec261905ccf"
         alt=""
         width="100%"
       />
@@ -58,7 +58,7 @@
   <div fxLayout="row" fxLayoutGap="20" fxLayout.xs="column" fxLayoutGap.xs="10">
     <div fxFlex="50" fxFlex.xs="100">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/visi%C3%B3n.jpg?alt=media&token=75919ff1-277b-4109-9245-813388b54199"
+        src="https://firebasestorage.googleapis.com/v0/b/redcal-8c1d7.appspot.com/o/IMG-20120830-00039.jpg?alt=media&token=9b9cef77-5b8a-44ac-8931-1b24b2f79bb2"
         alt=""
         width="100%"
       />
