--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div fxFill fxLayout="column">
   <app-navbar [user]="autenticado"></app-navbar>
   <router-outlet></router-outlet>
-  <mat-toolbar color="primary" fxLayoutAlign="center center">
-    <span>© 2022 RLSC All rights reserved.</span>
+  <mat-toolbar color="primary" fxLayoutAlign="center center" style="margin-top: 20px;">
+    <span style="font-size: 14px;">© 2022 RLSC All rights reserved.</span>
   </mat-toolbar>
 </div>
